tests/bad/bad_spaces.js
var foo = 1;

if (foo) {
 ffoo = 3;
}

foobar();